force-app/main/default/objects/Stock__c/fields/Day_Change__c.field-meta.xml
<CustomField>
    <fullName>Day_Change__c</fullName>
    <label>Day Change</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>