force-app/main/default/objects/Stock__c/fields/Day_Change_Amount__c.field-meta.xml
<CustomField>
    <fullName>Day_Change_Amount__c</fullName>
    <label>Day Change Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>