force-app/main/default/objects/Stock__c/fields/External_API_Symbol__c.field-meta.xml
<CustomField>
    <fullName>External_API_Symbol__c</fullName>
    <externalId>true</externalId>
    <label>External API Symbol</label>
    <length>255</length>
    <type>Text</type>
</CustomField>