force-app/main/default/objects/Stock__c/fields/Previous_Close__c.field-meta.xml
<CustomField>
    <fullName>Previous_Close__c</fullName>
    <label>Previous Close</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>