force-app/main/default/objects/Stock__c/fields/Risk_Score__c.field-meta.xml
<CustomField>
    <fullName>Risk_Score__c</fullName>
    <label>Risk Score</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
    <description>ML-predicted risk score (0-100, higher = more risky)</description>
</CustomField>